fixed hero layout and some text aligned

--- a/css/main.css
+++ b/css/main.css
@@ -63,7 +63,7 @@ h5 {
   left: 14px;
 }
 .btn {
-  padding: 0 2rem;
+  padding: 0 1rem;
   color: white;
   border-radius: 3px;
   font-size: 1.5rem;
