--- a/css/main_query.css
+++ b/css/main_query.css
@@ -17,6 +17,18 @@
   h5 {
     text-align: center;
   }
+  .btn-primary {
+    justify-content: center;
+    font-size: 20px;
+    padding: 0.5rem 1rem;
+  }
+
+  .lang {
+    display: none;
+  }
+  .hero-wraper h4 {
+    text-align: center;
+  }
   .container {
     padding: 0 1rem;
     margin: auto;
